--- a/index.html
+++ b/index.html
@@ -5,7 +5,17 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Publicación de sitios web con GitHub pages</title>
 </head>
+<style>
+        h1 {
+            font-family: Arial, sans-serif;
+            color: #3498db; /* Azul */
+            text-align: center;
+            background-color: #f1f1f1;
+            padding: 20px;
+            border-radius: 10px;
+        }
+    </style>
 <body>
-    
+     <h1>Bienvenido a la guía para publicar páginas usando GitHub Pages</h1>
 </body>
 </html>
