cambio de color

--- a/index.html
+++ b/index.html
@@ -8,9 +8,9 @@
 <style>
         h1 {
             font-family: "Oswal", sans-serif;
-            color: #900C3F; /* rojizo */
+            color: #900C3F;
             text-align: center;
-            background-color: #f1f1f1;
+            background-color: #f7cfcf;
             padding: 20px;
             border-radius: 10px;
         }
